@@ -7,7 +7,7 @@ dnl
 AM_PROG_XML_I18N_TOOLS
 
 AM_CONFIG_HEADER(config.h)
-AM_INIT_AUTOMAKE(gdm,2.2.3.2)
+AM_INIT_AUTOMAKE(gdm,2.2.4.0)
 AM_MAINTAINER_MODE
 AM_ACLOCAL_INCLUDE(macros)
 
