@@ -1,3 +1,15 @@
+Tue Aug 21 03:03:49 2001  George Lebl <jirka@5z.com>
+
+	* configure.in: raise version number
+
+	* daemon/display.c, daemon/gdm.[ch], daemon/server.[ch],
+	  daemon/slave.c, daemon/xdmcp.c:  Send back info about current
+	  user and get the VT number on linux.  Implement a command in
+	  the control protocol for getting a list of console logins
+
+	* gui/gdmflexiserver.c: add an option for sending arbitrary commands
+	  to gdm for testing, and remove debugging output
+
 Mon Aug 20 01:10:24 2001  George Lebl <jirka@5z.com>
 
 	* gui/gdmconfig.c: finish editting of static servers and a bit
